--- a/example/multi-user-3d-web-experience/client/public/index.html
+++ b/example/multi-user-3d-web-experience/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg" href="/web-client/favicon.svg" />
+    <link rel="icon" type="image/svg" href="/web-client/favicon.png" />
     <meta
       name="viewport"
       content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
