updates social card

--- a/example/multi-user-3d-web-experience/client/public/index.html
+++ b/example/multi-user-3d-web-experience/client/public/index.html
@@ -13,20 +13,27 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://mml.mgz.me" />
     <meta property="og:title" content="The 3D Web Experience - mml.mgz.me" />
-    <meta property="og:description" content="The Multiplayer 3D Web Experience, powered by MML." />
     <meta property="og:image" content="https://mml.mgz.me/web-client/3d-web-experience.jpg" />
     <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta property="og:image:height" content="686" />
     <meta property="og:site_name" content="mml.mgz.me" />
     <meta property="og:locale" content="en_US" />
+    <meta
+      property="og:description"
+      content="The Multiplayer 3D Web Experience, powered by MML. Create multiplayer games and virtual worlds for the web effortlessly with MML. No networking setup, no complex 3D math - just create interactive virtual worlds in minutes."
+    />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@TheCodeTherapy" />
+    <meta name="twitter:creator" content="@TheCodeTherapy" />
     <meta name="twitter:title" content="The 3D Web Experience - mml.mgz.me" />
-    <meta name="twitter:description" content="The Multiplayer 3D Web Experience, powered by MML." />
     <meta name="twitter:image" content="https://mml.mgz.me/3d-web-experience.jpg" />
     <meta name="twitter:image:alt" content="A preview of the 3D Web Experience from mml.mgz.me." />
+    <meta
+      name="twitter:description"
+      content="The Multiplayer 3D Web Experience, powered by MML. Create multiplayer games and virtual worlds for the web effortlessly with MML. No networking setup, no complex 3D math - just create interactive virtual worlds in minutes."
+    />
 
     <!-- Additional Metadata -->
     <meta name="author" content="TheCodeTherapy" />
