updates social card

--- a/example/multi-user-3d-web-experience/client/public/index.html
+++ b/example/multi-user-3d-web-experience/client/public/index.html
@@ -20,7 +20,7 @@
     <meta property="og:locale" content="en_US" />
     <meta
       property="og:description"
-      content="The Multiplayer 3D Web Experience, powered by MML. Create multiplayer games and virtual worlds for the web effortlessly with MML. No networking setup, no complex 3D math - just create interactive virtual worlds in minutes."
+      content="The Multiplayer 3D Web Experience, powered by MML. Create multiplayer games and virtual worlds for the web effortlessly, and in minutes, with the 3D Web Experience and MML."
     />
 
     <!-- Twitter Card Meta Tags -->
@@ -32,7 +32,7 @@
     <meta name="twitter:image:alt" content="A preview of the 3D Web Experience from mml.mgz.me." />
     <meta
       name="twitter:description"
-      content="The Multiplayer 3D Web Experience, powered by MML. Create multiplayer games and virtual worlds for the web effortlessly with MML. No networking setup, no complex 3D math - just create interactive virtual worlds in minutes."
+      content="The Multiplayer 3D Web Experience, powered by MML. Create multiplayer games and virtual worlds for the web effortlessly, and in minutes, with the 3D Web Experience and MML."
     />
 
     <!-- Additional Metadata -->
