updates social card

--- a/example/multi-user-3d-web-experience/client/public/index.html
+++ b/example/multi-user-3d-web-experience/client/public/index.html
@@ -170,6 +170,18 @@
           >https://github.com/TheCodeTherapy/3d-web-experience</a
         >
       </p>
+
+      <h4>Easy to Learn</h4>
+      <p>
+        Check how I created an OpenSource 3D game with ThreeJS and MML while live streaming the
+        development of the entire game in a way that it could be watched inside the game itself 🤓
+        <a href="https://x.com/TheCodeTherapy/status/1819364432511697166" target="_blank"
+          >https://x.com/TheCodeTherapy/status/1819364432511697166</a
+        >
+      </p>
+
+      Created by
+      <a href="https://mgz.me" target="_blank">Marco Gomez (@TheCodeTherapy)</a> &copy; 2023 - 2025.
     </div>
   </body>
 </html>
