updates landing html document

--- a/example/multi-user-3d-web-experience/client/public/index.html
+++ b/example/multi-user-3d-web-experience/client/public/index.html
@@ -71,7 +71,6 @@
     </style>
   </head>
   <body>
-    <script type="application/javascript" src="/web-client/index.js"></script>
     <div class="main-content">
       <h1>Create Multiplayer Games and 3D Web Experiences with Zero Complexity</h1>
 
@@ -183,5 +182,6 @@
       Created by
       <a href="https://mgz.me" target="_blank">Marco Gomez (@TheCodeTherapy)</a> &copy; 2023 - 2025.
     </div>
+    <script type="application/javascript" src="/web-client/index.js" defer></script>
   </body>
 </html>
